Improve styling; add in hard-coded font data

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Font Fountain</title>
+    <title>Font of all Fonts</title>
     <link type="text/css" rel="stylesheet" href="./assets/css/styles.css" />
     <script
       src="https://kit.fontawesome.com/06876bda3a.js"
@@ -13,7 +13,7 @@
   <body>
     <header id="header-nav">
       <div>
-        <h1>Font Fountain</h1>
+        <h1>Font of all Fonts</h1>
       </div>
       <nav>
         <ul id="links">
@@ -55,53 +55,54 @@
         <button id="list-mode" class="fas fa-list" type="button"></button>
         <button id="reset" class="fas fa-redo" type="button"></button>
       </nav>
+
       <div id="content">
         <div class="card">
-          <h3 class="font-name">Font name</h3>
+          <h3 class="font-name">Roboto</h3>
           <i class="fas fa-plus-circle"></i>
-          <h5 class="font-author">Font author</h5>
+          <h5 class="font-author">Christian Robertson</h5>
           <p class="sample-text">Sample text</p>
         </div>
         <div class="card">
-          <h3 class="font-name">Font name</h3>
+          <h3 class="font-name">Gayathri</h3>
           <i class="fas fa-plus-circle"></i>
-          <h5 class="font-author">Font author</h5>
+          <h5 class="font-author">SMC</h5>
           <p class="sample-text">Sample text</p>
         </div>
         <div class="card">
-          <h3 class="font-name">Font name</h3>
+          <h3 class="font-name">Chilanka</h3>
           <i class="fas fa-plus-circle"></i>
-          <h5 class="font-author">Font author</h5>
+          <h5 class="font-author">SMC</h5>
           <p class="sample-text">Sample text</p>
         </div>
         <div class="card">
-          <h3 class="font-name">Font name</h3>
+          <h3 class="font-name">Open Sans</h3>
           <i class="fas fa-plus-circle"></i>
-          <h5 class="font-author">Font author</h5>
+          <h5 class="font-author">Steve Matterson</h5>
           <p class="sample-text">Sample text</p>
         </div>
         <div class="card">
-          <h3 class="font-name">Font name</h3>
+          <h3 class="font-name">Lato</h3>
           <i class="fas fa-plus-circle"></i>
-          <h5 class="font-author">Font author</h5>
+          <h5 class="font-author">Lukasz Dziedzic</h5>
           <p class="sample-text">Sample text</p>
         </div>
         <div class="card">
-          <h3 class="font-name">Font name</h3>
+          <h3 class="font-name">Manjari</h3>
           <i class="fas fa-plus-circle"></i>
-          <h5 class="font-author">Font author</h5>
+          <h5 class="font-author">Santhosh Thottingal</h5>
           <p class="sample-text">Sample text</p>
         </div>
         <div class="card">
-          <h3 class="font-name">Font name</h3>
+          <h3 class="font-name">Montserrat</h3>
           <i class="fas fa-plus-circle"></i>
-          <h5 class="font-author">Font author</h5>
+          <h5 class="font-author">Julieta Ulanovsky</h5>
           <p class="sample-text">Sample text</p>
         </div>
         <div class="card">
-          <h3 class="font-name">Font name</h3>
+          <h3 class="font-name">Roboto Condensed</h3>
           <i class="fas fa-plus-circle"></i>
-          <h5 class="font-author">Font author</h5>
+          <h5 class="font-author">Christian Robertson</h5>
           <p class="sample-text">Sample text</p>
         </div>
       </div>
