Create event listener for sample text input

--- a/index.html
+++ b/index.html
@@ -112,4 +112,5 @@
       <p>created by Marco Burman | 2020 | Chingu project</p>
     </footer>
   </body>
+  <script src="assets/js/main.js"></script>
 </html>
